--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/regularfalsi">Regular Falsi</a>
+          <a class="nav-link active" aria-current="page" href="/calculateRoots/regularfalsi">Regular Falsi</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/secant">Secant Method</a>
+          <a class="nav-link active" href="/calculateRoots/secant">Secant Method</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/bisection">Bisection Method</a>
+          <a class="nav-link active" href="/calculateRoots/bisection">Bisection Method</a>
         </li>
       </ul>
     </div>
